# patcher

./: .gitignore  LICENSE  README.md  bugs.md  config.py  core.py  credits.py  docker_services.py  file_manipulation.py  log.py  makefile.py  options.py  params.py  patcher.py  pyproject.toml  requirements.txt  service.py  utils.py
api/: app.py  testing.py
patcher-frontend/: README.md  package-lock.json  package.json
patcher-frontend/src/: App.js
src/: setup.py
src/adpatcher/: __main__.py  credits.py  docker_services.py  makefile.py  patcher.py  requirements.txt  services.py  utils.py
src/adpatcher/actions/: sos_action.py
src/adpatcher/utils/: diff_utils.py  docker_utils.py  file_utils.py  git_utils.py  path_utils.py  permission_utils.py  process_utils.py  service_utils.py
